# Sudoku

./: .gitignore  CMakeLists.txt  GUI.py  Makefile  README.md  Scraper.py  Sudoku.cpp  Sudoku.pro  Sudoku.py  SudokuGUI.py  main.cpp  test.py
